--- a/index.html
+++ b/index.html
@@ -1,88 +1,160 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
     <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="">
-        <meta name="author" content="">
-        <link rel="shortcut icon" href="assets/ico/favicon.png">
-
         <title>Royal Kings Archery</title>
-
-        <!-- Bootstrap core CSS -->
-        <link href="assets/css/bootstrap.css" rel="stylesheet">
-
-        <!-- Custom styles for this template -->
-        <link href="assets/css/soon.css" rel="stylesheet">
-
-
-        <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-        <!--[if lt IE 9]>
-          <script src="assets/js/html5shiv.js"></script>
-          <script src="assets/js/respond.min.js"></script>
-        <![endif]-->
-
-        <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
-
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+        <link rel="stylesheet" href="assets/css/main.css" />
+        <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+        <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
     </head>
-    <!-- START BODY -->
-    <body class="nomobile">
+    <body class="landing">
 
-        <!-- START HEADER -->
-        <section id="header">
-            <div class="container">
-                <header>
-                    <!-- HEADLINE -->
-                    <h1 data-animated="GoIn"><b>Royal Kings Archery</b> site is coming soon...</h1>
-                </header>
-                <!-- START TIMER -->
-                <div id="timer" data-animated="FadeIn">
-                    <p id="message"></p>
-                    <div id="days" class="timer_box"></div>
-                    <div id="hours" class="timer_box"></div>
-                    <div id="minutes" class="timer_box"></div>
-                    <div id="seconds" class="timer_box"></div>
+        <!-- Page Wrapper -->
+        <div id="page-wrapper">
+
+            <!-- Header -->
+            <header id="header" class="alt">
+                <h1><a href="index.html">Royal Kings Archery</a></h1>
+                <nav id="nav">
+                    <ul>
+                        <li class="special">
+                            <a href="#menu" class="menuToggle"><span>Menu</span></a>
+                            <div id="menu">
+                                <ul>
+                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="gallery.html">Gallery</a></li>
+                                    <li><a href="contact.html">Contact Us</a></li>
+                                </ul>
+                            </div>
+                        </li>
+                    </ul>
+                </nav>
+            </header>
+
+            <!-- Banner -->
+            <section id="banner">
+                <div class="inner">
+                    <h2>Royal Kings Archery Academy</h2>
+                    <p>Royal Archery for everyone in Chennai</p>
+                    <!--<ul class="actions">
+                        <li><a href="#" class="button special">Contact</a></li>
+                    </ul>-->
                 </div>
-                <!-- END TIMER -->
-                <div class="col-lg-4 col-lg-offset-4 mt centered" style="font-size: larger;">
-                    <label class="label label-primary">Email: royalkingsarcheryacademy@gmail.com</label><br>
-                    <label class="label label-primary">Phone:  +91-967 721 2295, +91-978 986 3078</label>
+                <a href="#one" class="more scrolly">Explore</a>
+            </section>
+
+            <!-- One -->
+            <section id="one" class="wrapper style1 special">
+                <div class="inner">
+                    <header class="major">
+                        <h2>Professional Archery Training</h2>
+                        <p>The Professional training covers the all three types of bow category<br>
+                            <strong>Recurve, Indian, Compund.</strong>
+                        </p>
+                    </header>
+                    <ul class="icons major">
+                        <li><span class="icon fa-eye major style1"><span class="label">Lorem</span></span></li>
+                        <li><span class="icon fa-thumbs-o-up major style2"><span class="label">Ipsum</span></span></li>
+                        <li><span class="icon fa-users major style3"><span class="label">Dolor</span></span></li>
+                    </ul>
                 </div>
-            </div>
-            <!-- LAYER OVER THE SLIDER TO MAKE THE WHITE TEXTE READABLE -->
-            <div id="layer"></div>
-            <!-- END LAYER -->
-            <!-- START SLIDER -->
-            <div id="slider" class="rev_slider">
-                <ul>
-                    <li data-transition="slideleft" data-slotamount="1" data-thumb="assets/img/slider/1.jpg">
-                        <img src="assets/img/slider/1.jpg">
-                    </li>
-                    <li data-transition="slideleft" data-slotamount="1" data-thumb="assets/img/slider/2.jpg">
-                        <img src="assets/img/slider/2.jpg">
-                    </li>
-                    <li data-transition="slideleft" data-slotamount="1" data-thumb="assets/img/slider/3.jpg">
-                        <img src="assets/img/slider/3.jpg">
-                    </li>
-                    <li data-transition="slideleft" data-slotamount="1" data-thumb="assets/img/slider/4.jpg">
-                        <img src="assets/img/slider/4.jpg">
-                    </li>
+            </section>
+
+            <!-- Two -->
+            <section id="two" class="wrapper alt style2">
+                <section class="spotlight">
+                    <div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
+                        <h2>Recurve Archery</h2>
+                        <p>A recurve bow is a bow with limbs that curve away from the archer when unstrung. A recurve bow stores more energy and delivers energy more efficiently than the equivalent straight-limbed bow, giving a greater amount of energy and speed to the arrow.</p>
+                    </div>
+                </section>
+                <section class="spotlight">
+                    <div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
+                        <h2>Compound Archery</h2>
+                        <p>A compound bow is a bow that uses a levering system, usually of cables and pulleys, to bend the limbs. The pulley/cam system grants the user a mechanical advantage, and so the limbs of a compound bow are much stiffer than those of a recurve bow or longbow.</p>
+                    </div>
+                </section>
+                <section class="spotlight">
+                    <div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
+                        <h2>Indian Archery</h2>
+                        <p>A Indian bow is a traditional bow made from horn, wood, and sinew laminated together, cf., laminated bow. The horn is on the belly, facing the archer, and sinew on the outer side of a wooden core. When the bow is drawn, the sinew (stretched on the outside) and horn (compressed on the inside) store more energy than wood for the same length of bow.</p>
+                    </div>
+                </section>
+            </section>
+
+            <!-- Three -->
+            <section id="three" class="wrapper style3 special">
+                <div class="inner">
+                    <header class="major">
+                        <h2>Why Royal Kings Archey?</h2>
+                    </header>
+                    <ul class="features">
+                        <li class="icon fa-paper-plane-o">
+                            <h3>Professional Training</h3>
+                            <!--                            <p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>-->
+                        </li>
+                        <li class="icon fa-clock-o">
+                            <h3>Flexible Timing</h3>
+
+                        </li>
+                        <li class="icon fa-map-marker">
+                            <h3>Easily Accessible location</h3>
+
+                        </li>
+                        <li class="icon fa-user">
+                            <h3>Personalized training</h3>
+
+                        </li>
+                        <li class="icon fa-cart-plus">
+                            <h3>Equipment Support</h3>
+
+                        </li>
+                        <li class="icon fa-heart-o">
+                            <h3>Trust</h3>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+
+            <!-- CTA -->
+            <section id="cta" class="wrapper style4">
+                <div class="inner">
+                    <header>
+                        <h2>Interested in joining with us</h2>
+                        <p>Feel free to contact us.</p>
+                    </header>
+                    <ul class="actions vertical">
+                        <li><a href="gallery.html" class="button fit special">Gallery</a></li>
+                        <li><a href="contact.html" class="button fit">Contact</a></li>
+                    </ul>
+                </div>
+            </section>
+
+            <!-- Footer -->
+            <footer id="footer">
+                <ul class="icons">
+                    <li><a href="https://twitter.com/RKarchery" class="icon fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
+                    <li><a href="https://www.facebook.com/RoyalKingsArchery/" class="icon fa-facebook" target="_blank"><span class="label">Facebook</span></a></li>
+                    <li><a href="https://plus.google.com/112146406466711184306" class="icon fa-google-plus" target="_blank"><span class="label">Google</span></a></li>
+                    <li><a href="mailto:neela.archer@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
                 </ul>
-            </div>
-            <!-- END SLIDER -->
-        </section>
-        <!-- END HEADER -->
+                <ul class="copyright">
+                    <li>&copy; Royal Kings Archery academy </li>
+                </ul>
+            </footer>
 
-        <!-- Bootstrap core JavaScript
-        ================================================== -->
-        <!-- Placed at the end of the document so the pages load faster -->
+        </div>
+
+        <!-- Scripts -->
         <script src="assets/js/jquery.min.js"></script>
-        <script type="text/javascript" src="assets/js/modernizr.custom.js"></script>
-        <script src="assets/js/bootstrap.min.js"></script>
-        <script src="assets/js/soon/plugins.js"></script>
-        <script src="assets/js/soon/jquery.themepunch.revolution.min.js"></script>
-        <script src="assets/js/soon/custom.js"></script>
+        <script src="assets/js/jquery.scrollex.min.js"></script>
+        <script src="assets/js/jquery.scrolly.min.js"></script>
+        <script src="assets/js/skel.min.js"></script>
+        <script src="assets/js/util.js"></script>
+        <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+        <script src="assets/js/main.js"></script>
+
     </body>
-    <!-- END BODY -->
 </html>
