--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
                                 <div class="card">
                                     <img src="images/contact/neela.jpg" alt="neela krishnan" style="width:100%"/>
                                     <div class="container">
-                                        <h2>Neela Krishnan</h2>
+                                        <h2>B Neela Krishna</h2>
                                         <p class="title">COACH</p>
                                         <p><i class="fa fa-envelope fa-lg" aria-hidden="true"></i> neela.archer@gmail.com</p>
                                         <p><i class="fa fa-phone fa-lg" aria-hidden="true"></i> 9677212295, 8639112366</p>
