Changed the title

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <section id="banner">
                 <div class="inner">
                     <h2>Royal Kings Archery Academy</h2>
-                    <p>Royal Archery for everyone in Chennai</p>
+                    <p>Royal Archery for all</p>
                     <!--<ul class="actions">
                         <li><a href="#" class="button special">Contact</a></li>
                     </ul>-->
